[gd_scene load_steps=7 format=2]

[ext_resource path="res://Arts/Sushi/sushi_roll_rice.png" type="Texture" id=1]
[ext_resource path="res://Objects/Ingredients/Rice.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RandomSFX.gd" type="Script" id=3]
[ext_resource path="res://Sounds/rice.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="Animation" id=2]
resource_name = "Scrapped"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 8 ) ]
}

[node name="Rice" type="Area2D"]
z_index = 4
collision_layer = 2
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Scrapped = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
script = ExtResource( 3 )
base_volume = -5.0

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Rice_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Rice_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
